# windows-rust-keylogger

./: Cargo.toml  README.md
src/: exfiltration.rs  keylogger.rs  main.rs  persistence.rs
